# vercel-clone

./: .dockerignore  .gitignore  AUDIT.md  Cargo.toml  DOCS.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml
crates/api/: .env.example  Cargo.toml  Dockerfile
crates/api/migrations/: 0001_init.sql  0002_add_production_branch.sql  0002_github_token.sql  0004_add_deployment_artifact_key.sql  0005_add_deployment_image_ref.sql  0006_add_build_log_lines.sql
crates/api/src/: config.rs  db.rs  errors.rs  main.rs
crates/api/src/middleware/: auth.rs
crates/api/src/model/: build.rs  build_job.rs  deployment.rs  project.rs  user.rs
crates/api/src/routes/: admin.rs  api_keys.rs  auth.rs  deployments.rs  github.rs  health.rs  metrics.rs  mod.rs  projects.rs
crates/api/src/services/: admin.rs  api_keys.rs  auth.rs  deployment_servers.rs  deployments.rs  github.rs  mod.rs  nats.rs  nats_tls.rs  projects.rs  storage.rs
crates/build-worker/: Cargo.toml  Dockerfile
crates/build-worker/src/: builder.rs  config.rs  git.rs  main.rs  models.rs  nats.rs  storage.rs
docs/: BUILDKIT-AND-BUILDCTL.md
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: build-log-viewer.tsx  dashboard-layout.tsx  deployment-row.tsx  deployment-status-badge.tsx  project-card.tsx
frontend/lib/: api.ts  auth-context.tsx  hooks.ts  utils.ts
infra/: alloy-config.alloy  buildkit-entrypoint.sh  buildkitd.toml  docker-entrypoint.sh
infra/nats/: generate-certs.sh  nats.conf
src/: config.rs  db.rs  errors.rs  main.rs
src/middleware/: auth.rs
src/model/: api_key.rs  build_job.rs  deployment.rs  mod.rs  project.rs  user.rs
src/models/: mod.rs
src/routes/: api_keys.rs  auth.rs  deployments.rs  mod.rs  projects.rs
src/services/: auth.rs  (+6 more)
(+18 files in other folders)
