[package]
name = "vercel-clone-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
anyhow = "1"
argon2 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
config = "0.14"
dotenvy = "0.15"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
jsonwebtoken = "10.4.0"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = "0.10"
sha2 = "0.10"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "request-id", "timeout"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
octocrab = "0.50.0"
async-nats = "0.42"
async-stream = "0.3"
