[package]
name = "vercel-clone-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
async-nats = "0.42"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
git2 = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
dotenvy = "0.15"
config = "0.14"
anyhow = "1"
tokio-util = { version = "0.7", features = ["io"] }
walkdir = "2"
async-stream = "0.3"
